--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-virtuoso": "^4.7.2",
     "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
@@ -43,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/GorMkrtchyann/vilatrans_admin.git",
+  "author": "Hovhannisyan2112 <hovhannisyan.2112@mail.ru>",
+  "license": "MIT"
 }
