--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-rte": "^0.16.5",
     "react-scripts": "5.0.1",
     "react-virtuoso": "^4.7.2",
     "sass": "^1.71.1",
